--- a/autosave paginas/Login/stylelogin.css
+++ b/autosave paginas/Login/stylelogin.css
@@ -1,7 +1,11 @@
 html, body{
     height: 100%;
 }
-
+*{
+    padding: 0;
+    margin: 0;
+    border: 0;
+}
 
 .form-control:focus{
     border-color: #FF7A00 !important;
