--- a/autosave paginas/Cadastro de Fretes/style.css
+++ b/autosave paginas/Cadastro de Fretes/style.css
@@ -1,3 +1,5 @@
+
+
 *{
     padding: 0;
     margin: 0;
@@ -20,4 +22,11 @@ html, body{
     scrollbar-width: thin;
     scrollbar-color: transparent transparent; /* Define a cor da barra de rolagem como transparente */
 }
-
+.custom-bg-color:checked {
+    background-color: #ff5733!important;
+    border-color: #ff5733!important; 
+  }
+ .custom-bg-color:focus{
+    border-color: #FF9874!important;
+    --bs-form-switch-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23FF9874'/%3e%3c/svg%3e")!important;
+ } 
