--- a/autosave paginas/Cadastro de Fretes/style.css
+++ b/autosave paginas/Cadastro de Fretes/style.css
@@ -29,4 +29,7 @@ html, body{
  .custom-bg-color:focus{
     border-color: #FF9874!important;
     --bs-form-switch-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23FF9874'/%3e%3c/svg%3e")!important;
- } 
+ }
+ .botaoperfil {
+    border: 0!important;
+ }
